Finalização CSS tela principal e tela das bibliotecas
-> Finalização do CSS da tela principal.
-> Finalização do CSS da tela de bibliotecas, arrumado a confirmação
para excluir a biblioteca e desta o painel ao editar biblioteca.
-> Finalização do CSS da área do usuário.
-> Padronizado CSS para todas as telas, foi padronizado o cabeçalho e
área do usuário

--- a/principal.html
+++ b/principal.html
@@ -6,24 +6,32 @@
 	<!-- <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE"> -->
 	<title>My Libraries</title>
 	<link rel="stylesheet" href="css/stylePrincipal.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-	<h1>My Libraries</h1>
-	<h2>Bem vindo!</h2>
+	<div id = "painelCabecalho">
 
-	<div id = "painelUsuario">
-		<div id = "areaUsuarioBotoes">
-			<a id = "linkContaUsuario" class = "botao" href="contaUsuario.html">Conta</a>
-			<button id = "botaoSair" class = "botao" type="button">Sair</button>
-		</div>
-
-		<div id = "areaUsuario">
+		<div id = "painelLogoCabecalho">
 			
 		</div>
-	</div>
 
+		<div id = "painelTituloCabecalho">
+			<h1>MyLibraries</h1>
+		</div>
+	
+
+		<div id = "painelUsuario">
+			<div id = "areaUsuarioBotoes">
+	
+				<a id = "botaoContaUsuario" class = "botao" href="contaUsuario.html">Conta</a>
+				<button id = "botaoSair" class = "botao" type="button">Sair</button>
+			</div>
+	
+			<div id = "areaUsuario">
+				
+			</div>
+		</div>
+	</div>
 
 	<div id = "menuPrincipal">
 		<a class = "menu" href="principal.html">Principal</a>
