--- a/emprestimos.html
+++ b/emprestimos.html
@@ -51,8 +51,8 @@
 			</div>
 
 			<form id="for" name="formEmp" action="">
-				<fieldset>
-					<legend>Cadastrar Empréstimos</legend>
+				<!-- <fieldset> -->
+					<!-- <legend>Cadastrar Empréstimos</legend> -->
 
 						<!-- <label>Biblioteca:</label> -->
 							<select name="lib" id="biblioteca" class="biblioteca" onchange="emprestimosControle.obterItens()">
@@ -76,7 +76,7 @@
 
 					<input type="hidden" id="cod">
 
-					<textarea id="text" name="" id="" cols="30" rows="10"></textarea>
+					<textarea id="text" name="" id="" cols="38" rows="10"></textarea>
 
 					<div id = "error">
 				
@@ -85,11 +85,11 @@
 
 						<input id="salvar" type="submit" value="Salvar" class="botao"> <!-- onclick="window.location.reload()" -->
 
-						<input type="reset" value="Limpar" class="botao">
+						<input id ="limp" type="reset" value="Limpar" class="botao">
 					</div>
 					<!-- <label id="error" for=""></label> -->
 			
-				</fieldset>
+				<!-- </fieldset> -->
 			</form>
 
 		</div>
