--- a/emprestimos.html
+++ b/emprestimos.html
@@ -76,9 +76,9 @@
 
 					<input type="hidden" id="cod">
 
-					<textarea id="text" name="" id="" cols="38" rows="10"></textarea>
+					<textarea id="text" name="" id="" cols="38" rows="10" placeholder="Observações"></textarea>
 
-					<div id = "error">
+					<div id = "message">
 				
 					</div>
 					<div class = "botoes">
@@ -122,7 +122,7 @@
 					<table id="tableMusicas" class="tabela">
 						<thead>
 							<tr>
-								<th  id = "cabecalhoLivro" class = "cabecalho" colspan="7" rowspan="" headers="" scope="">Músicas</th>
+								<th  id = "cabecalhoMusica" class = "cabecalho" colspan="7" rowspan="" headers="" scope="">Músicas</th>
 							</tr>
 							<tr>
 								<th class = "titulo titulo1" colspan="1" rowspan="" headers="" scope="">Item</th>
