Conclusão do empréstimo

--- a/relItemEmp.html
+++ b/relItemEmp.html
@@ -10,7 +10,7 @@
 	<input id="inicio" type="date">
 	<input id="fim" type="date">
 
-	<input id="aplicar" type="button" value="Aplicar" onclick="relItemEmp.btnAplicar()">
+	<input id="aplicar" type="button" value="Aplicar">
 
 	<script src="js\ConexaoBancoDados.js"></script>
 	<!-- <script src="js\emprestimosDAO.js"></script> -->
