--- a/principal.html
+++ b/principal.html
@@ -37,7 +37,7 @@
 		<a class = "menu" href="principal.html">Principal</a>
 		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
 		<a class = "menu" href="emprestimos.html">Empréstimos</a>
-		<a class = "menu" href="">Relatórios</a>
+		<a class = "menu" href="relItemEmp.html">Relatórios</a>
 	</div>
 
 	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
