Finalizado CSS tela de bibliotecas e conta do usuário
-> Finalizado CSS tela de bibliotecas: foram feitos melhorias e foi
feito uma janela modal para confirmação da exclusão de uma biblioteca.
-> Finalizado CSS tela da conta do usuário: Foi feito o CSS e uma janela
modal para a confirmação da exclusão da conta do usuário.

--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -35,8 +35,7 @@
 
 				<div class = "botoes">
 					<button id="botaoCadastrar" class="botao" type="submit">Cadastrar</button>
-					
-					<a id="linkVoltar" class="botao" href="index.html">Voltar</a>
+					<a id="linkVoltar" class="botao" href="index.html">Cancelar</a>
 				</div>
 
 			</div>
