--- a/principal.html
+++ b/principal.html
@@ -36,7 +36,7 @@
 		<a class = "menu" href="principal.html">Principal</a>
 		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
 		<a class = "menu" href="emprestimos.html">Empréstimos</a>
-		<a class = "menu" href="relItemEmp.html">Relatórios</a>
+		<a class = "menu" href="">Relatórios</a>
 	</div>
 
 	<div id = "painelPrincipal">
