Criação da tela Sobre
-> Criado a tela Sobre que passa uma descrição breve do sistema e tem um
link para o projeto do GitHub.

--- a/bibliotecas.html
+++ b/bibliotecas.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Bibliotecas</title>
+	<link rel="shortcut icon" href="css/images/logo.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="css/styleBibliotecas.css">
 </head>
 <body>
@@ -37,6 +38,7 @@
 		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
 		<a class = "menu" href="emprestimos.html">Empréstimos</a>
 		<a class = "menu" href="">Relatórios</a>
+		<a class = "menu" href="sobre.html">Sobre</a>
 	</div>
 
 	<div id = "painelPrincipal">
