--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 	<title>MyLibraries</title>
+	<link rel="shortcut icon" href="css/images/logo.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="css/styleIndex.css">
 </head>
 <body>
