Conclusão do projeto

--- a/emprestimos.html
+++ b/emprestimos.html
@@ -37,7 +37,7 @@
 		<a class = "menu" href="principal.html">Principal</a>
 		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
 		<a class = "menu" href="emprestimos.html">Empréstimos</a>
-		<a class = "menu" href="">Relatórios</a>
+		<a class = "menu" href="sobre.html">Sobre</a>
 	</div>
 
 	<div id="painelPrincipal">
@@ -167,6 +167,8 @@
 	</div>
 
 	<script src="js\ConexaoBancoDados.js"></script>
+	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="js/ObterSessaoUsuario.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js\emprestimosDAO.js"></script>
 	<script src="js\emprestimosControle.js"></script>
 	<script src="js\BibliotecaDAO.js"></script>
