--- a/sobre.html
+++ b/sobre.html
@@ -37,13 +37,12 @@
 		<a class = "menu" href="principal.html">Principal</a>
 		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
 		<a class = "menu" href="emprestimos.html">Empréstimos</a>
-		<a class = "menu" href="relItemEmp.html">Relatórios</a>
 		<a class = "menu" href="sobre.html">Sobre</a>
 	</div>
 
 	<div id = "painelSobre">
 		<h2>Sobre</h2>
-		<p>O sistema web MyLibraries tem o objetivo de auxiliar o usuário no cadastro e controle de empréstimos de suas bibliotecas, onde é possível cadastar seus livros, músicas e vídeos. Além de possibilitar o controle dos empréstimos realizados de suas bibliotecas. O projeto MyLibraries está disponível no GitHub, para acessar o projeto basta clicar no link abaixo.</p>
+		<p>O sistema web MyLibraries tem o objetivo de auxiliar o usuário no cadastro e controle de empréstimos de suas bibliotecas, onde é possível cadastar seus livros, músicas e vídeos, além de possibilitar o controle dos empréstimos realizados de suas bibliotecas. O projeto MyLibraries está disponível no GitHub, para acessar o projeto basta clicar no link abaixo.</p>
 
 		<a id = "linkGitHub" href="https://github.com/feliperodriguesprado/MyLibraries" target="_blank">
 			<div id = "logoGitHub">
