Revert "Conclusão do projeto"
This reverts commit 738329abd9c196e44a9b0126272dc20088b6db83.

--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Novo usuário</title>
-	<link rel="shortcut icon" href="css/images/logo.ico" type="image/x-icon"/>
+	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+	<title>MyLibraries</title>
 	<link rel="stylesheet" href="css/styleCadastroLogin.css">
 </head>
 <body>
