--- a/contaUsuario.html
+++ b/contaUsuario.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 	<title>Conta do usuário</title>
-	<link rel="shortcut icon" href="css/images/logo.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="css/styleContaUsuario.css">
 
 
@@ -36,6 +36,7 @@
 					<div id = "painelBotoes1">
 						<button id = "botaoSalvarAlteracoes" class = "botao" type = "submit">Salvar alterações</button>
 						<a href="#confirmacao" id = "botaoExcluirConta" class = "botao" type="button">Excluir conta</a>
+						<!-- <button id = "botaoExcluirConta" class = "botao" type="button">Excluir conta</button> -->
 					</div>
 
 					<div id = "painelBotoes2">
