--- a/bibliotecas.html
+++ b/bibliotecas.html
@@ -37,6 +37,7 @@
 		<a class = "menu" href="principal.html">Principal</a>
 		<a class = "menu" href="bibliotecas.html">Bibliotecas</a>
 		<a class = "menu" href="emprestimos.html">Empréstimos</a>
+		<a class = "menu" href="">Relatórios</a>
 		<a class = "menu" href="sobre.html">Sobre</a>
 	</div>
 
