--- a/sobre.html
+++ b/sobre.html
@@ -52,6 +52,7 @@
 		<a id = "linkGitHubDescricao" href="https://github.com/feliperodriguesprado/MyLibraries" target="_blank">Projeto GitHub</a>
 
 	</div>
+	<div></div>
 
 	<script src="js/ConexaoBancoDados.js" type="text/javascript" charset="utf-8" async defer></script>
 	<script src="js/UsuarioDAO.js" type="text/javascript" charset="utf-8" async defer></script>
